# sha256-halo2

./: Cargo.toml  README.md
src/: lib.rs
src/sha256/: builder.rs  compression.rs  gate.rs  mod.rs  spread.rs  util.rs
src/util/: builder.rs  gates.rs  mod.rs
