[package]
name = "sha256-halo2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = "0.4.1"
halo2-ecc = "0.4.1"
hex = "0.4.3"
hex-literal = "0.4.1"
itertools = "0.12.1"
num-bigint = "0.4.4"
sha2 = "0.10.8"
